<resources>
    <string name="app_name">Medical File</string>
    <string name="setting_language">Language</string>
    <string name="setting_help">Help</string>
    <string name="setting_switch_account">Switch Account</string>
    <string name="setting_size">Font Size</string>
    <string name="setting_about">About</string>
    <string name="setting_log_out">Log Out</string>
    <string name="setting_profile_name">Profile name</string>
    <string name="setting_see_your_profile">see your profile</string>
    <string name="setting_change_password">Change Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="past_diseases">Past Diseases</string>
    <string name="my_midecal_files">My midecal Files</string>
    <string name="pastexamination">Past Examination</string>
    <string name="my_drugs">My Drugs</string>
    <string name="surgeries">Surgeries</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="register">register</string>
    <string name="create_account">Create your account until you get your health care .</string>
    <string name="name">name :</string>
    <string name="e_mail">E-mail :</string>
    <string name="password">password :</string>
    <string name="confirm_password">confirm password :</string>
    <string name="get_start">get start</string>
    <string name="sign_in">sign in</string>
    <string name="sign_in_to_get_your_health_care">sign in to get your health care .</string>
    <string name="user_name">user name :</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="examination_rays">Rays</string>
    <string name="examination_analyze">Analyze</string>
    <string name="examination_specula">Specula</string>

    <string name="Temporary_Drugs">Temporary Drugs</string>
    <string name="Choronic_Drug">Choronic Drug</string>
    <string name="save">save</string>
    <string name="please_enter_analyze_date">please enter analyze date</string>
    <string name="please_enter_analyze_type">please enter analyze type</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="previous_diseases">Previous diseases</string>
    <string name="name_of_doctor">name of the doctor</string>
    <string name="specialization">specialization</string>
    <string name="symptoms">symptoms</string>
    <string name="examination">examination</string>
    <string name="diagnosis">diagnosis</string>
    <string name="required_examinations">Required Examinations</string>
    <string name="Treatment">Treatment</string>
    <string name="pressure">Pressure</string>
    <string name="diabetes">Diabetes</string>
    <string name="kidney">Kidney</string>
    <string name="bitterness">bitterness</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="temporary_drug">Temporary Drug</string>
    <string name="Drug_name">Drug name</string>
    <string name="duration">duration</string>
    <string name="Dose">Dose</string>
    <string name="Starting_date">Starting date</string>


</resources>
