<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:background="@color/white" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/st_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_prof"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:padding="6dp"
                    android:src="@mipmap/logocircle"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/tv_pName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="10dp"
                        android:text="@string/setting_profile_name"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/tv_pShow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_pName"
                        android:padding="10dp"
                        android:text="@string/setting_see_your_profile"
                        android:textSize="20sp" />

                </RelativeLayout>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/st_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_head"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_language"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/st_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_lang"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_help"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_help"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/st_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_help"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_switch"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_switch_account"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/st_changPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_switch"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_chang_pass"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_change_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/st_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_changPass"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_size"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_size"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/st_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_size"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_about"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_about"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/st_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/st_about"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="20dp">

                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/setting_log_out"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>